--- a/Assignment-1.Rmd
+++ b/Assignment-1.Rmd
@@ -2,7 +2,10 @@
 title: "assignment-1"
 author: "Helle"
 date: "2023-02-16"
-output: html_document
+output: prettydoc::html_pretty:
+    theme: cayman
+    highlight: github
+
 ---
 
 ```{r setup, include=FALSE}
