--- a/Assignment-1.Rmd
+++ b/Assignment-1.Rmd
@@ -19,13 +19,7 @@ library(tidyverse)
 
 set.seed(1997)
 
-
-
 ```
-
-
-
-
 
 Random bot - capitalist (coin holder)
 
@@ -102,6 +96,8 @@ playing wsls_strong against our random agent
 
 
 ```{r}
+set.seed(1997)
+
 self <- rep(NA, trials)
 bot <- rep(NA, trials)
 
@@ -126,7 +122,7 @@ print(self)
 #Sanity check plot
 performance_df_strong <- tibble(self, bot, trial = seq(trials), feedback = as.numeric(self==bot))
 
-performance_df %>% ggplot() +
+performance_df_strong %>% ggplot() +
   geom_line(color = "red", aes(trial, self)) +
   geom_line(color = "blue", aes(trial, bot))
 
@@ -149,13 +145,16 @@ performance_df_strong <- performance_df_strong %>%
 
 performance_df_strong %>% ggplot() +
   geom_line(aes(trial, cumulative_self), color = "red")+
-  geom_line(aes(trial, cumulative_bot), color = "blue")
+  geom_line(aes(trial, cumulative_bot), color = "blue") +
+  theme_minimal()
 
 
 ```
 Running the loss aversive wsls agents against the random bot
 
 ```{r}
+set.seed(1997)
+
 self <- rep(NA, trials)
 bot <- rep(NA, trials)
 
@@ -169,10 +168,208 @@ for (trial in 2:trials){
   if(self[trial-1] == bot[trial-1]) {
     feedback = 1
   } else {feedback = 0}
-  self[trial] <- win_switch_agent(prev_choice = self[trial-1], feedback, bias_lose_strong, bias_win_strong)
+  self[trial] <- win_switch_agent(prev_choice = self[trial-1], feedback, bias_lose_weak, bias_win_weak)
+}
+
+```
+
+
+```{r sanity weak random}
+#Sanity check plot
+performance_df_weak <- tibble(self, bot, trial = seq(trials), feedback = as.numeric(self==bot))
+
+performance_df_weak %>% ggplot() +
+  geom_line(color = "red", aes(trial, self)) +
+  geom_line(color = "blue", aes(trial, bot))
+```
+Plot the weak wsls 
+
+```{r performance plot weak random}
+performance_df_weak <- tibble(self, bot, trial = seq(trials), feedback = as.numeric(self==bot))
+
+performance_df_weak <- performance_df_weak %>% 
+  mutate(cumulative_self = cumsum(feedback)/seq_along(feedback), 
+         cumulative_bot = cumsum(1-feedback)/ seq_along(feedback))
+
+
+performance_df_weak %>% ggplot() +
+  geom_line(aes(trial, cumulative_self), color = "red")+
+  geom_line(aes(trial, cumulative_bot), color = "blue")+
+  theme_classic()
+```
+### Agent turnament 2 
+win-stay-lose-shift bot against win-shift-lose-stay agent with two biases. 
+
+
+# creating the wsls-bot
+
+```{r wsls bot}
+
+win_stay_agent <- function (prev_choice, feedback) {
+  if (feedback == 1){
+    choice = prev_choice
+  }
+  else if (feedback == 0) {
+    choice = 1-prev_choice
+  }
+  return(choice)
+}
+
+```
+
+
+First the strong dedication to strategy: 
+
+```{r - strong wsls against wsls bot}
+set.seed(1997)
+
+self <- rep(NA, trials)
+bot <- rep(NA, trials)
+
+self[1] <- random_agent(0.5)
+bot[1] <- random_agent(0.5)
+
+for (trial in 2:trials){
+  if ( self[trial-1] == bot[trial-1]) {
+    feedback = 1
+  }
+  else {
+    feedback = 0
+  }
+  self[trial] <- win_switch_agent(prev_choice = self[trial-1], 
+                                  feedback, 
+                                  bias_lose_strong,
+                                  bias_win_strong)
+  bot[trial] <- win_stay_agent(prev_choice = bot[trial-1],
+                               1-feedback)
 }
 
 
-print(self)
+
+
 ```
+
+
+```{r sanity}
+#Sanity check plot
+performance_df_strong <- tibble(self, bot, trial = seq(trials), feedback = as.numeric(self==bot))
+
+performance_df_strong %>% ggplot() +
+  geom_line(color = "red", aes(trial, self)) +
+  geom_line(color = "blue", aes(trial, bot))
+```
+
+```{r plot wsls strong}
+performance_df_strong <- tibble(self, bot, trial = seq(trials), feedback = as.numeric(self==bot))
+
+performance_df_strong <- performance_df_strong %>% 
+  mutate(cumulative_self = cumsum(feedback)/seq_along(feedback), 
+         cumulative_bot = cumsum(1-feedback)/ seq_along(feedback))
+
+
+performance_df_strong %>% ggplot() +
+  geom_line(aes(trial, cumulative_self), color = "red")+
+  geom_line(aes(trial, cumulative_bot), color = "blue") +
+  theme_minimal()
+```
+
+Now the weak 
+
+```{r wsls vs wsls weak}
+
+set.seed(1997)
+
+self <- rep(NA, trials)
+bot <- rep(NA, trials)
+
+self[1] <- random_agent(0.5)
+bot[1] <- random_agent(0.5)
+
+for (trial in 2:trials){
+  if (self[trial-1] == bot[trial-1]) {
+    feedback = 1
+  }
+  else {
+    feedback = 0
+  }
+  self[trial] <- win_switch_agent(prev_choice = self[trial-1],
+                                  feedback, 
+                                  bias_lose_weak, 
+                                  bias_win_weak)
+  bot[trial] <- win_stay_agent(prev_choice = bot[trial-1],
+                               1-feedback)
+}
+
+
+
+```
+
+```{r}
+#Sanity check plot
+performance_df_weak <- tibble(self, bot, trial = seq(trials), feedback = as.numeric(self==bot))
+
+performance_df_weak %>% ggplot() +
+  geom_line(color = "red", aes(trial, self)) +
+  geom_line(color = "blue", aes(trial, bot))
+```
+```{r}
+performance_df_weak <- tibble(self, bot, trial = seq(trials), feedback = as.numeric(self==bot))
+
+performance_df_weak <- performance_df_weak %>% 
+  mutate(cumulative_self = cumsum(feedback)/seq_along(feedback), 
+         cumulative_bot = cumsum(1-feedback)/ seq_along(feedback))
+
+
+performance_df_weak %>% ggplot() +
+  geom_line(aes(trial, cumulative_self), color = "red")+
+  geom_line(aes(trial, cumulative_bot), color = "blue") +
+  theme_minimal()
+```
+Running on 100 agents
+
+
+```{r}
+agents <- 10
+
+feedback <- array(NA, c(agents, trials))
+cum_self <- array(NA, c(agents, trials))
+
+
+
+set.seed(1997)
+
+
+for(agent in 1:agents){
+  self <- rep(NA, trials)
+  bot <- rep(NA, trials)
+
+  self[1] <- random_agent(0.5)
+  bot[1] <- random_agent(0.5)
+  
+  
+  for (trial in 2:trials){
+    if (self[trial-1] == bot[trial-1]) {
+      feedback[agent, trial] = 1
+    }
+    else {
+      feedback[agent, trial] = 0
+    }
+    self[trial] <- win_switch_agent(prev_choice = self[trial-1],
+                                    feedback = feedback[agent,trial], 
+                                    bias_lose_weak, 
+                                    bias_win_weak)
+    bot[trial] <- win_stay_agent(prev_choice = bot[trial-1],
+                                 feedback = 1-feedback[agent,trial])
+   
+    cum_self[agent,trial] <- (cumsum(feedback[agent, trial])/seq_along(trials))
+  }
+}
+
+
+
+
+```
+
+
+
 
