--- a/assignment_2/assign_2_sigrid.Rmd
+++ b/assignment_2/assign_2_sigrid.Rmd
@@ -177,15 +177,11 @@ temp <- tibble(unique(d)) %>%
 recovery_df <- future_pmap_dfr(temp, sim_d_and_fit, .options = furrr_options(seed = TRUE))
 getwd()
 
-#write.csv(recovery_df, "recovery_df.csv", row.names = FALSE) 
+#write.csv(recovery_df, "recovery_df.csv", row.names = FALSE)
+```
 
-testtest <- recovery_df %>% 
-  mutate(
-    bias_winEst_prop = exp(bias_winEst)/(1+exp(bias_winEst)),
-    bias_loseEst_prop = exp(bias_loseEst)/(1+exp(bias_loseEst))
 
-  )
-
+```{r}
 p1 <- ggplot(recovery_df, aes(bias_winTrue, bias_winEst)) + 
   geom_point(alpha = 0.1) + 
   geom_smooth() +
@@ -208,21 +204,24 @@ p2 <- ggplot(recovery_df, aes(bias_loseTrue, bias_loseEst)) +
     color = "red")
 
 p1 + p2
-
-# log odds scale? 
-# exp(logit)/(1+exp(logit)) 
+# looks weird, I suspect the scale of the estimated values needs to be fixed 
 ```
 
+# Parameter recovery with conversion from log odds to probabilies 
 ```{r}
-testtest <- recovery_df %>% 
+# converting log odds to probabilities the analogue way 
+# inv.logit() from the "boot" package does exactly the same 
+# pacman::p_load(boot)
+
+recovery_df <- recovery_df %>% 
   mutate(
     bias_winEst_prop = exp(bias_winEst)/(1+exp(bias_winEst)),
     bias_loseEst_prop = exp(bias_loseEst)/(1+exp(bias_loseEst))
   )
+```
 
-
-
-p1 <- ggplot(testtest, aes(bias_winTrue, bias_winEst_prop)) + 
+```{r}
+p1 <- ggplot(recovery_df, aes(bias_winTrue, bias_winEst_prop)) + 
   geom_point(alpha = 0.1) + 
   geom_smooth() +
   theme_classic() + 
@@ -233,7 +232,7 @@ p1 <- ggplot(testtest, aes(bias_winTrue, bias_winEst_prop)) +
     color = "red")
 # + facet_wrap(.~bias_loseTrue) # not sure it makes sense to plot with a facetwrap 
 
-p2 <- ggplot(testtest, aes(bias_loseTrue, bias_loseEst_prop)) +
+p2 <- ggplot(recovery_df, aes(bias_loseTrue, bias_loseEst_prop)) +
   geom_point(alpha = 0.1) + 
   geom_smooth() +
   theme_classic() + 
